# Adafruit-WebIDE

./: .gitignore  .travis.yml  COPYRIGHT  README.md  config.js  monitor.js  npm-shrinkwrap.json  package-lock.json  package.json  server.js  webide.js
config/: README.md  config.js
controllers/: editor.js  site.js  user.js
editor/: README.md  package.json  server.js
editor/config/: config.js
editor/controllers/: editor.js  site.js  user.js
editor/editor/: config.js  package.json  server.js
editor/helpers/: editor_setup.js  fs_helper.js  git_helper.js  request_helper.js  updater.js
editor/views/: header.jade  layout.jade
helpers/: editor_setup.js  exec_helper.js  fs_helper.js  git_helper.js  hostname_helper.js  request_helper.js  ruby_helper.js  scheduler.js  scripts_helper.js  test.js  updater.js  websocket_helper.js
helpers/python/: debug_helper.js  debug_test_client.js  debugger.py  encoder_combined.py  generate_json.py  pg_logger.py
models/: jobModel.js  webideModel.js
public/javascripts/: context_menu.js  core.js  davFS.js  editor.js  occ_editor.js  webide_utils.js
public/stylesheets/: app.css  font-awesome.css  pytutor.css
release/: changelog.txt  version.txt
scripts/: .bashrc  .profile  adafruit-webide-angstrom.service  adafruit-webide-angstrom.sh  adafruit-webide.service  adafruit-webide.sh  build.sh  build_deb.sh  change-hostname.sh  change-wifi.sh  install-angstrom.sh  install.sh  install_angstrom.sh  redis.conf  remote.sh  set-datetime.sh  setup.sh  uninstall-angstrom.sh  uninstall.sh
scripts/deb/: .gitignore  CMakeLists.txt  adafruit  postinst  postrm  prerm
scripts/redis/: redis.conf  redis_6379
test/: fs_helper_test.js  git_helper_test.js
views/: error.jade  error.pug  header.jade  header.pug  index.ejs  layout.ejs  layout.jade  layout.pug  oauth_error.jade
views/editor/: index.jade  index.pug
(+27 files in other folders)
